Fix alignment problem with BMW week cells

--- a/web/css/thecommons.css
+++ b/web/css/thecommons.css
@@ -832,7 +832,7 @@ a.text-link > span {
 }
 
 #beyond-mere-words .week-cell {
-    min-height: 120px;
+    min-height: 150px;
     padding: 15px 15px 25px;
 }
 
